# oscar

./: .gitignore  Agents.md  BUILD_ERROR_NOTES.md  BUILD_WORKAROUND.md  CAPACITOR_QUICKSTART.md  CAPACITOR_SETUP.md  CAPACITOR_STATUS.md  CLAUDE.md  DESIGN.md  LICENSE  MOBILE_SETUP_GUIDE.md  MODEL_PIPELINE_HANDOFF.md  QUICK_START_MOBILE.md  README.md  ROADMAP.md  TESTING_LINKS_GUIDE.md  TESTING_QUICK_STEPS.md  ai-backend-consolidation.html  amplify.yml  capacitor.config.ts  capacitor.config.ts.template  cliff.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  stt-tts-lib-0.1.0.tgz  supabase-migration-feedback.sql  supabase-migration-starred.sql  supabase-migration-vocabulary.sql  tailwind.config.js  tsconfig.json
.github/workflows/: ct2rs-smoke-test.yml  quality.yml  release.yml  vulkan-build-test.yml  vulkan-crtstatic-test.yml
android/app/: build.gradle
app/: globals.css  layout.tsx  page.tsx
app/auth/: page.tsx
app/billing/: page.tsx
app/notes/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/recording/: page.tsx
app/refund-policy/: page.tsx
app/results/: page.tsx
app/settings/: page.tsx
components/: FeatureCard.tsx  RecordingButton.tsx  ThemeToggle.tsx
docs/: context-aware-dictation.md  formatting-regression-tests.md
experiments/ct2rs-smoke-test/: Cargo.toml  README.md
experiments/ct2rs-smoke-test/.cargo/: config.toml
experiments/ct2rs-smoke-test/src/: main.rs
lib/: aiFormatter.ts  audioToText.ts  constants.ts  prompts.ts  utils.ts
scripts/: InstallOscar.command  generate-logo-assets.mjs  sync-version.js
(+122 files in other folders)
